--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "nodemon app.js"
   },
   "author": "",
@@ -15,6 +15,8 @@
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
+    "chance": "^1.1.11",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   }
 }
