--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -26,4 +26,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+      with:
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          PORT: ${{ secrets.PORT }}
     - run: npm run test-ci
