--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  PORT: ${{ secrets.PORT }}
+
 jobs:
   build:
 
@@ -26,4 +30,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm run test-ci
